--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -11,4 +11,4 @@ PyMuPDF>=1.19.3
 sphinx-favicon>=0.2
 sphinxcontrib-youtube>=1.0.1
 sphinx-panels>=0.6.0
-sphinx-toolbox=>2.15.3
+sphinx-toolbox>=2.15.3
