--- a/voicing/voicing-80hz-target.yaml
+++ b/voicing/voicing-80hz-target.yaml
@@ -11,8 +11,8 @@ devices:
     type: CoreAudio
     channels: 2
     device: "Built-in Output"
-    #format: FLOAT32LE
-    format: S16LE
+    format: FLOAT32LE
+    #format: S16LE
 
 mixers:
   mono:
@@ -38,84 +38,86 @@ mixers:
             inverted: false
 
 filters:
-  LR_highpass:
+  LR_highpass_60:
     type: BiquadCombo
     parameters:
       type: LinkwitzRileyHighpass
-      freq: 60
+      freq: 45
       order: 8
-  highshelf_123:
+  HS_1_negative:
     type: Biquad
     parameters:
       type: Highshelf
-      freq: 75
-      gain: -12
+      freq: 117
+      gain: -10
       slope: 6
-  highshelf_voice_low:
+  HS_2_positive:
     type: Biquad
     parameters:
       type: Highshelf
-      freq: 1000
+      freq: 506
+      gain: 2.9
+      slope: 6
+  HS_3_positive:
+    type: Biquad
+    parameters:
+      type: Highshelf
+      freq: 5000
+      gain: 3.5
+      slope: 12
+  LS_1_positive:
+    type: Biquad
+    parameters:
+      type: Lowshelf
+      freq: 173
+      gain: 2.0
+      slope: 6
+  peak_1:
+    type: Biquad
+    parameters:
+      type: Peaking
+      freq: 535
       gain: 3
-      slope: 6
-  highshelf_voice_high:
+      q: 3
+  peak_2:
     type: Biquad
     parameters:
-      type: Highshelf
-      freq: 6000
-      gain: -2.5
-      slope: 6
-  highshelf_5k:
-    type: Biquad
-    parameters:
-      type: Highshelf
-      freq: 6000
+      type: Peaking
+      freq: 78
       gain: 9
-      slope: 6
-  highshelf_12k:
-    type: Biquad
-    parameters:
-      type: Lowpass
-      freq: 14300
-      q: 0.707
-  peak_80:
+      q: 2.4
+  peak_3:
     type: Biquad
     parameters:
       type: Peaking
-      freq: 80
-      q: 1
-      gain: 5
-  peak_316:
+      freq: 96
+      gain: 4
+      q: 3
+  peak_4:
     type: Biquad
     parameters:
       type: Peaking
-      freq: 316
-      q: 5
-      gain: -12.3
-  peak_868:
+      freq: 2040
+      gain: 3.2
+      q: 3
+  peak_16k:
     type: Biquad
     parameters:
       type: Peaking
-      freq: 868
-      q: 1.5
-      gain: -9
-  peak_10500:
-    type: Biquad
-    parameters:
-      type: Peaking
-      freq: 10500
-      q: 2
+      freq: 16000
       gain: -3
-  channel_timing_fix:
-    type: Delay
+      q: 4
+  peak_5:
+    type: Biquad
     parameters:
-      delay: 0.1
-      unit: ms
-      subsample: false
+      type: Peaking
+      freq: 1000
+      gain: 1.3
+      q: 0.8
   gain_to_normal_level:
     type: Gain
     parameters:
-      gain: 3
+      gain: -6
 
 pipeline:
   - type: Mixer
@@ -123,29 +125,30 @@ pipeline:
   - type: Filter
     channel: 0
     names:
-      - LR_highpass
-      - highshelf_123
-      - highshelf_voice_low
-      - highshelf_voice_high
-      - highshelf_5k
-      - highshelf_12k
-      - peak_80
-      - peak_316
-      - peak_868
-      - peak_10500
-      #- channel_timing_fix
+      - LR_highpass_60
+      - HS_1_negative
+      - HS_2_positive
+      - HS_3_positive
+      - LS_1_positive
+      - peak_1
+      - peak_2
+      - peak_3
+      - peak_4
+      - peak_16k
+      - peak_5
       - gain_to_normal_level
   - type: Filter
     channel: 1
     names:
-      - LR_highpass
-      - highshelf_123
-      - highshelf_voice_low
-      - highshelf_voice_high
-      - highshelf_5k
-      - highshelf_12k
-      - peak_80
-      - peak_316
-      - peak_868
-      - peak_10500
+      - LR_highpass_60
+      - HS_1_negative
+      - HS_2_positive
+      - HS_3_positive
+      - LS_1_positive
+      - peak_1
+      - peak_2
+      - peak_3
+      - peak_4
+      - peak_16k
+      - peak_5
       - gain_to_normal_level
