--- a/voicing/voicing-test.yaml
+++ b/voicing/voicing-test.yaml
@@ -43,7 +43,7 @@ filters:
     type: BiquadCombo
     parameters:
       type: LinkwitzRileyHighpass
-      freq: 50
+      freq: 45
       order: 8
   HS_1_negative:
     type: Biquad
@@ -85,7 +85,7 @@ filters:
     parameters:
       type: Peaking
       freq: 78
-      gain: 4
+      gain: 9
       q: 2.4
   peak_3:
     type: Biquad
@@ -115,50 +115,41 @@ filters:
       freq: 1000
       gain: 1.3
       q: 0.8
-  peak_6:
-    type: Biquad
-    parameters:
-      type: Peaking
-      freq: 3300
-      gain: 3
-      q: 3
   gain_to_normal_level:
     type: Gain
     parameters:
       gain: -6
 
 pipeline:
-#  - type: Mixer
-#    name: mono
+  - type: Mixer
+    name: mono
   - type: Filter
     channel: 0
     names:
       - LR_highpass_60
-      - HS_1_negative
-      - HS_2_positive
-      - HS_3_positive
-      - LS_1_positive
-      - peak_1
-      - peak_2
-      - peak_3
-      - peak_4
-      - peak_16k
-      - peak_5
-      - peak_6
-      - gain_to_normal_level
+#      - HS_1_negative
+#      - HS_2_positive
+#      - HS_3_positive
+#      - LS_1_positive
+#      - peak_1
+#      - peak_2
+#      - peak_3
+#      - peak_4
+#      - peak_16k
+#      - peak_5
+#      - gain_to_normal_level
   - type: Filter
     channel: 1
     names:
       - LR_highpass_60
-      - HS_1_negative
-      - HS_2_positive
-      - HS_3_positive
-      - LS_1_positive
-      - peak_1
-      - peak_2
-      - peak_3
-      - peak_4
-      - peak_16k
-      - peak_5
-      - peak_6
-      - gain_to_normal_level
+#      - HS_1_negative
+#      - HS_2_positive
+#      - HS_3_positive
+#      - LS_1_positive
+#      - peak_1
+#      - peak_2
+#      - peak_3
+#      - peak_4
+#      - peak_16k
+#      - peak_5
+#      - gain_to_normal_level
