--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "euphonium"]
-	path = euphonium
+[submodule "software/euphonium"]
+	path = software/euphonium
 	url = https://github.com/feelfreelinux/euphonium.git
