adjusting labels to what is actually used

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -8,13 +8,13 @@ categories:
   - title: 'Breaking'
     label: 'type: breaking'
   - title: 'New'
-    label: 'type: feature'
+    label: 'type: original project scope'
+  - title: 'New'
+    label: 'type: enhancement'
   - title: 'Bug Fixes'
     label: 'type: bug'
-  - title: 'Maintenance'
-    label: 'type: maintenance'
   - title: 'Documentation'
-    label: 'type: docs'
+    label: 'type: documentation'
   - title: 'Other changes'
   - title: 'Dependency Updates'
     label: 'type: dependencies'
