adding IDF setup to build as well as a working clean target

--- a/software/Makefile
+++ b/software/Makefile
@@ -2,6 +2,7 @@
 JTAG_PORT ?= "/dev/ttyUSB0"
 COPY_FLAGS := -v -R
 CMAKE_BUILD_ARGS := -DHTTP_SERVER_PORT=8080
+IDF_HOME ?= ${HOME}/esp/esp-idf
 
 ifeq ($(OS),Windows_NT)
     #??
@@ -20,8 +21,13 @@ copy-config:
 	@echo "Copying local cofig"
 	cp ${COPY_FLAGS} config/* euphonium/
 
+ifeq ($(origin IDF_PATH),undefined)
+esp32: copy-config
+	bash -c "source ${IDF_HOME}/export.sh; cd euphonium/targets/esp32; sh generate_full_build.sh;"
+else
 esp32: copy-config
 	cd euphonium/targets/esp32; sh generate_full_build.sh;
+endif
 
 cli: copy-config
 	cd euphonium/targets/cli/build; cmake ${CMAKE_BUILD_ARGS} ..;
@@ -37,4 +43,9 @@ clean-cli:
 	@$(MAKE) -C euphonium/targets/cli/build clean
 
 clean-esp32:
-	cd euphonium/targets/esp32; idf.py fullclean;
+	rm -fr euphonium/targets/esp32/build euphonium/targets/esp32/app/build; rm -f euphonium/targets/esp32/app/managed_components/joltwallet__littlefs/.component_hash;
+
+monitor:
+	cd euphonium/targets/esp32; sh monitor.sh ${JTAG_PORT};
+
+flash-and-monitor: flash-all monitor
