--- a/software/Makefile
+++ b/software/Makefile
@@ -10,22 +10,30 @@ else
     UNAME_S := $(shell uname -s)
     ifeq ($(UNAME_S),Linux)
         COPY_FLAGS += -u
-				CMAKE_BUILD_ARGS += -DCMAKE_CXX_STANDARD_LIBRARIES="-lX11 -ldl"
+				CMAKE_BUILD_ARGS += -DCMAKE_CXX_STANDARD_LIBRARIES="-ldl"
     endif
     ifeq ($(UNAME_S),Darwin)
         #COPY_FLAGS += -u
     endif
 endif
 
+#esp32-cmake-config:
+#	cd euphonium/targets/esp32/recovery; cmake .;
+
+ifeq ($(origin IDF_PATH),undefined)
+esp32: copy-config
+	bash -c "source ${IDF_HOME}/export.sh; cd euphonium/targets/esp32; sh generate_full_build.sh;"
+else
+esp32: copy-config
+	cd euphonium/targets/esp32; sh generate_full_build.sh;
+endif
+
 copy-config:
 	@echo "Copying local cofig"
 	cp ${COPY_FLAGS} config/* euphonium/
 
-esp32: copy-config
-	cd euphonium/targets/esp32; sh generate_full_build.sh;
-
 cli: copy-config
-	cd euphonium/targets/cli/build; cmake ${CMAKE_BUILD_ARGS} ..;
+	mkdir -p euphonium/targets/cli/build; cd euphonium/targets/cli/build; cmake ${CMAKE_BUILD_ARGS} ..;
 	@$(MAKE) -C euphonium/targets/cli/build
 
 flash-all: esp32
@@ -49,3 +57,11 @@ monitor:
 
 flash-and-monitor: flash-all monitor
 flash-spiffs-and-monitor: flash-spiffs monitor
+
+web-ide:
+	cd euphonium/web-ide; npm install; npm run build;
+
+start-ide: web-ide
+	cd euphonium/web-ide; npm run dev;
+
+all: clean cli esp32 web-ide
