--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v2
         with:
-          context: .
+          context: software
           file: ./Dockerfile
           push: false
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/stroem:latest
