changing build settings

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: software
-          file: ./Dockerfile
+          file: ./software/Dockerfile
           push: false
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/stroem:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/stroem:buildcache
