making path explicit

--- a/software/Dockerfile
+++ b/software/Dockerfile
@@ -3,7 +3,7 @@ FROM lydbydissing/euphonium-builder:latest AS build
 WORKDIR /workspace
 
 ## Install Python dependencies
-COPY euphonium/requirements.txt euphonium/requirements.txt
+COPY ./euphonium/requirements.txt /workspace/euphonium/requirements.txt
 RUN pip install -r euphonium/requirements.txt
 
 COPY . .
