--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,17 +12,15 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout repository and submodules
         uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-      - name: Checkout submodules
-        uses: textbook/git-checkout-submodule-action@2.1.1
-        with:
-          remote: true
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build
@@ -30,7 +28,7 @@ jobs:
         with:
           context: ./software
           file: ./software/Dockerfile
-          push: false
+          push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/stroem:latest
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/stroem:buildcache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/stroem:buildcache,mode=max
